added CustomMap and mappable interface

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
+        <div id="map" style="height: 100vh;"></div>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAIU37u5plv_1nzgmgwQCHQW892S3M0fM"></script>
         <script src="./src/index.ts"></script>
     </body>
 </html>
